# deltarobot

./: .gitignore  README.md
datasheets/: README.md
datasheets/l298n-module/: Motor Driver Module-L298N - Wiki.html
doc/: deltarobot-mesasge-format.odt  deltarobot-message-format.odt
doc/old motor/: motor_descr.txt
fw/controller/: .gitignore  Makefile  buildnburn.sh  libdeltarobot  libdeltarobot-src  project.c
hw/: .gitignore
hw/deltarobot/: deltarobot-comps.lib  deltarobot.net  deltarobot.pro  deltarobot.sch
hw/deltarobot-driver/: deltarobot-driver.kicad_pcb  deltarobot-driver.lib  deltarobot-driver.net  deltarobot-driver.pro  deltarobot-driver.sch
hw/fet-driver-adapter/: fet-driver-adapter.kicad_pcb  fet-driver-adapter.net  fet-driver-adapter.pro
mec/: assembly.fcstd  axle_adapter.fcstd  axle_adapter.fcstd1  led5mm.fcstd  motor.fcstd  motor.fcstd1  optical_holder.fcstd  optical_holder.fcstd1  optical_sw_holder.fcstd  optical_sw_holder.fcstd1  optical_sw_holder.stl  optical_sw_holder_no_pins.stl  optical_sw_holder_no_pins_larger_holes.stl  stopper.fcstd  stopper.fcstd1  stopper_sw.fcstd  stopper_sw.fcstd1
report/: report.tex
sw/deltarobot-gui/: .gitignore  CMakeLists.txt  CoordinateArrows.qml  CoordinateRow.qml  ExechonScene.qml  libdeltarobot  main.cpp  main.qml  qml.qrc
sw/libdeltarobot/: .gitignore  CMakeLists.txt
sw/libdeltarobot/include/libdeltarobot/: deltarobot.h  protocol.h  protocol_pc_utils.h
sw/libdeltarobot/src/: deltarobot.cpp  protocol.c  protocol_pc_utils.cpp
sw/libdeltarobot/test/: cross_comm.cpp  send_opcode.c
(+4 files in other folders)
